--- a/Views/Admin/Productos.cshtml
+++ b/Views/Admin/Productos.cshtml
@@ -96,7 +96,10 @@
         color: black; /* Color del texto de los encabezados */
         background-color: whitesmoke;
     }
-
+    .btn-danger{
+        background-color:transparent;
+        border:none;    
+    }
     .table-custom {
         width: 100%;
         font-size: 20px; /* Tamaño de fuente */
