--- a/Views/User/RegistroUsuarios.cshtml
+++ b/Views/User/RegistroUsuarios.cshtml
@@ -52,7 +52,7 @@
     </div>
     <!-- Campo de Contraseña -->
     <div class="form-group">
-        @Html.LabelFor(model => model.Password, "contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Password, "Contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="input-group">
                 @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Contraseña", id = "txtContraseña" })
@@ -67,7 +67,7 @@
 
     <!-- Campo de Confirmación de Contraseña -->
     <div class="form-group">
-        @Html.LabelFor(model => model.ConfirmPassword, " confirmar contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.ConfirmPassword, "Confirmar contraseña", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="input-group">
                 @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", placeholder = "Confirmar Contraseña", id = "txtConfirmContraseña" })
@@ -89,9 +89,6 @@
 </div>
 }
 
-<div>
-    @Html.ActionLink("Volver a la lista", "Index","Home")
-</div>
 <script>
     // Script para toggle de visibilidad de la contraseña
     const togglePassword = document.getElementById('togglePassword');
@@ -127,5 +124,9 @@
 
     .form-group {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    .input-group {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: bold;
     }
 </style>
