--- a/Views/Domiciliario/Pedidos.cshtml
+++ b/Views/Domiciliario/Pedidos.cshtml
@@ -41,6 +41,11 @@
     </div>
 
 </div>
+<div id="modalConfirmacion" style="display: none; background-color:whitesmoke" class="mb-5">
+    <p>¿Estás seguro de que quieres marcar este pedido como entregado?</p>
+    <button id="confirmarBtn" class="btn btn-primary">Sí</button>
+    <button id="cancelarBtn" class="btn btn-primary">Cancelar</button>
+</div>
 <table class="table table-custom">
     <thead>
         <tr>
@@ -80,11 +85,7 @@
 
     </tbody>
 </table>
-<div id="modalConfirmacion" style="display: none; background-color:cornsilk">
-    <p>¿Estás seguro de que quieres marcar este pedido como entregado?</p>
-    <button id="confirmarBtn" class="btn btn-primary">Sí</button>
-    <button id="cancelarBtn" class="btn btn-primary">Cancelar</button>
-</div>
+
 <style>
 
     .table-custom th {
